--- a/CV  Page.html
+++ b/CV  Page.html
@@ -3,10 +3,11 @@
 		<body>
 			<header class="Box_Field">
 				<fieldset>
-				<link rel="stylesheet" type="text/css" href="Elliot.css"/>
-				<h1>Elliot'S CV</h1>
-				<img src="Elliot23.jpg" alt="Elliot's Profile Pic" width="200" height="200"/>
-				<h2>Application Tester</h2>
+					<link rel="stylesheet" type="text/css" href="Elliot.css"/>
+					<h1>Elliot'S CV</h1>
+					<img src="Elliot23.jpg" alt="Elliot's Profile Pic" width="200" height="200"/>
+					<img src="Desktop.jpg" alt="Image" width="1000" height="200">
+					<h2>Application Tester</h2>
 				</fieldset>
 			</header>
 			</br>
