--- a/Contact Me Page.html
+++ b/Contact Me Page.html
@@ -3,11 +3,9 @@
 		<body>
 			<header>
 					<link rel="stylesheet" type="text/css" href="Elliot.css"/>
-					<h2>Personal Details and Contact Info</h2></br>
+					<h2>Contact Me</h2></br>
 					<img class="Dp_Pic" src="Elliot23.jpg" alt="Elliot's Profile Pic" width="200" height="200"/>
-					<select>
-
-					</select>
+					<img src="Desktop.jpg" alt="Image" width="1000" height="200">
 			</header>
 			</br>
 			<div class="Box_Field">
