--- a/Hompage.html
+++ b/Hompage.html
@@ -2,10 +2,11 @@
 	<html>
 		<body>
 			<header class="Box_Field">
-				<fieldset>
+				<fieldset class="Image" >
 				    <link rel="stylesheet" type="text/css" href="Elliot.css"/>
 					<h1>Elliot</h1>
 					<img src="Elliot23.jpg" alt="Elliot's Profile Pic" width="200" height="200"/>
+					<img src="Desktop.jpg" alt="Image" width="1000" height="200">
 					<h2>Application Tester</h2>
 				</fieldset>
 
@@ -16,6 +17,12 @@
 					<a href="C:/Users/Tech-H09/Documents/Sublime/Hompage.html">Home</a>
 					<a href="C:/Users/Tech-H09/Documents/Sublime/CV%20%20Page.html">CV</a>
 					<a href="C:/Users/Tech-H09/Documents/Sublime/Contact%20Me%20Page.html">Contact</a>
+				</fieldset>
+			</div>
+			<br>
+			<div>
+				<fieldset>
+					<img src="Sublime Code.jpg" alt="Image" width="1300" height="500">
 				</fieldset>
 			</div>
 		</body>
